--- a/views/pay_set_up.ejs
+++ b/views/pay_set_up.ejs
@@ -72,17 +72,16 @@
       </div>
       <div class="topbtn">
         <p><span>판매 정책 추가 <ion-icon name="add-circle-outline"></ion-icon></span></p>
-        <p><span>수정</span><span>삭제</span></p>
       </div>
       <div class="content">
         <div>
           <span>판매 정책 제목</span>
-          <p>사랑과 악마</p>
+          <div class="contentbox">사랑과 악마</div>
         </div>
         <div class="line"></div>
         <div>
           <span>대여 정상가</span>
-          <p>10</p>
+          <div class="contentbox">10</div>
         </div>
         <div>
           <span>사용여부</span>
@@ -94,29 +93,222 @@
           </label>
         </div>
         <div>
-          <span>대여 할인가</span>
-          <p>8</p>
+          <span class="E9446C">대여 할인가</span>
+          <div class="contentbox">8</div>
         </div>
         <div>
           <span>소장 정상가</span>
-          <p>10</p>
+          <div class="contentbox">10</div>
         </div>
         <div>
-          <span>소장 할인가</span>
-          <p>8</p>
+          <span class="E9446C">소장 할인가</span>
+          <div class="contentbox">8</div>
         </div>
         <div>
           <span>기다리면 무료 여부</span>
-          <p>+ 조회 후 2 일뒤
-          </p>
+          <div class="contentbox">
+            <label class="toggler-wrapper-content style-1" id="unique">
+              <input type="checkbox" >
+              <div class="toggler-slider">
+                <div class="toggler-knob"></div>
+              </div>
+            </label>
+            &nbsp;&nbsp;&nbsp;조회 후 2일뒤
+          </div>
         </div>
         <div>
           <span>사용시작</span>
-          <p>2022-06-31</p>
+          <div class="contentbox">2022-06-31</div>
         </div>
         <div>
           <span>사용종료</span>
-          <p>2022-06-31</p>
+          <div class="contentbox">2022-06-31</div>
+        </div>
+        <div class="mdDelBtn">
+          <button>수정</button><button>삭제</button>
+        </div>
+      </div>
+    </div>
+    <!-- <div class="box2">
+      <div class="togglebtn">
+        특정 에피소드만 가격을 차별화 하고싶나요?
+        <label class="toggler-wrapper style-1">
+          <input type="checkbox" >
+          <div class="toggler-slider">
+            <div class="toggler-knob"></div>
+          </div>
+        </label>
+      </div>
+    </div> -->
+    <div class="box3">
+      <div class="top">
+        <div class="headbox">
+          <img src="images/icon/info.svg" alt="">
+          <p class="head">예외 가격 판매정책 <ion-icon name="help-circle-outline"></ion-icon></p>
+        </div>
+        <p class="headSub">기본 가격 판매정책 보다 더 높거나 낮게 판매하고 싶은 에피소드가 있을 경우 이곳에서 설정합니다.</p>
+      </div>
+      <div class="topbtn">
+        <p><span>판매 정책 추가<ion-icon name="add-circle-outline"></ion-icon></span></p>
+        <p><span>수정</span><span>삭제</span></p>
+      </div>
+      <div class="selectBox">
+        <select name="" id="">
+          <option value="1">특정 스토리지정 추가</option>
+          <option value="2">특정 스토리지정 추가 1</option>
+          <option value="3">특정 스토리지정 추가 2</option>
+          <option value="4">특정 스토리지정 추가 3</option>
+          <option value="5">특정 스토리지정 추가 4</option>
+          <option value="6">특정 스토리지정 추가 5</option>
+          <option value="7">특정 스토리지정 추가 6</option>
+          <option value="8">특정 스토리지정 추가 7</option>
+        </select>
+        <ion-icon name="caret-down-outline"></ion-icon>
+        <button>저장</button>
+      </div>
+      <div class="content">
+        <div>
+          <span>판매 정책 제목</span>
+          <div class="contentbox">사랑과 악마</div>
+        </div>
+        <div class="line"></div>
+        <div>
+          <span>대여 정상가</span>
+          <div class="contentbox">10</div>
+        </div>
+        <div>
+          <span>사용여부</span>
+          <label class="toggler-wrapper-content style-1">
+            <input type="checkbox" >
+            <div class="toggler-slider">
+              <div class="toggler-knob"></div>
+            </div>
+          </label>
+        </div>
+        <div>
+          <span class="E9446C">대여 할인가</span>
+          <div class="contentbox">8</div>
+        </div>
+        <div>
+          <span>소장 정상가</span>
+          <div class="contentbox">10</div>
+        </div>
+        <div>
+          <span class="E9446C">소장 할인가</span>
+          <div class="contentbox">8</div>
+        </div>
+        <div>
+          <span>기다리면 무료 여부</span>
+          <div class="contentbox">
+            <label class="toggler-wrapper-content style-1" id="unique">
+              <input type="checkbox" >
+              <div class="toggler-slider">
+                <div class="toggler-knob"></div>
+              </div>
+            </label>
+            &nbsp;&nbsp;&nbsp;조회 후 2일뒤
+          </div>
+        </div>
+        <div>
+          <span>사용시작</span>
+          <div class="contentbox">2022-06-31</div>
+        </div>
+        <div>
+          <span>사용종료</span>
+          <div class="contentbox">2022-06-31</div>
+        </div>
+        <div class="mdDelBtn">
+          <button>수정</button><button>삭제</button>
+        </div>
+      </div>
+    </div>
+    <!--  -->
+    <div class="box3">
+      <div class="top">
+        <div class="headbox">
+          <img src="images/icon/info.svg" alt="">
+          <p class="head">무료 가격 판매정책</p>
+        </div>
+        <p class="headSub">특별히 예외적으로 무료로 처리하고 싶은 에피소드가 있을 경우 이곳에서 지정 합니다.<br/>예를 들어 1화에서 5화까지 무료로 하고 싶을 경우 이곳에서 지정해 주세요.</p>
+      </div>
+      <div class="topbtn">
+        <p><span>판매 정책 추가<ion-icon name="add-circle-outline"></ion-icon></span></p>
+        <p><span>수정</span><span>삭제</span></p>
+      </div>
+      <div class="selectBox">
+        <select name="" id="">
+          <option value="1">특정 스토리지정 추가</option>
+          <option value="2">특정 스토리지정 추가 1</option>
+          <option value="3">특정 스토리지정 추가 2</option>
+          <option value="4">특정 스토리지정 추가 3</option>
+          <option value="5">특정 스토리지정 추가 4</option>
+          <option value="6">특정 스토리지정 추가 5</option>
+          <option value="7">특정 스토리지정 추가 6</option>
+          <option value="8">특정 스토리지정 추가 7</option>
+        </select>
+        <ion-icon name="caret-down-outline"></ion-icon>
+        <button>저장</button>
+      </div>
+      <div class="content">
+        <div>
+          <span><b class="idxNumber">IDX 2454</b><br/>판매 정책 제목</span>
+          <div class="contentbox">사랑과 악마</div>
+        </div>
+        <div class="line"></div>
+        <div>
+          <span>대여 정상가</span>
+          <div class="contentbox">10</div>
+        </div>
+        <div>
+          <span>사용여부</span>
+          <label class="toggler-wrapper-content style-1">
+            <input type="checkbox" >
+            <div class="toggler-slider">
+              <div class="toggler-knob"></div>
+            </div>
+          </label>
+        </div>
+        <!-- <div class="mdDelBtn">
+          <button>수정</button><button>삭제</button>
+        </div> -->
+      </div>
+    </div>
+    <div class="mainBtnBox">
+      <button class="E9446CBTN">변경저장</button>
+      <button>판매요청</button>
+    </div>
+    <div class="progress">
+      <div class="progressLine">
+        <div class="progressBox">
+          <ion-icon name="ellipse-sharp" class="E9446C"></ion-icon>
+          <p>검수중</p>
+        </div>
+        <div class="progressContentLine">
+          <div class="completetLine" style="width: 100%;"></div>
+        </div>
+        <div class="progressBox">
+          <ion-icon name="checkmark-circle-sharp" class="E9446C"></ion-icon>
+          <p>수정요청</p>
+        </div>
+        <div class="progressContentLine">
+          <div class="completetLine" style="width: 66.6666%;"></div>
+        </div>
+        <div class="progressBox">
+          <ion-icon name="ellipse-outline" class="E9446C"></ion-icon>
+          <p>검수완료</p>
+        </div>
+      </div>
+      <div class="progressLine" style="margin-top: 24px">
+        <div class="progressBox">
+          <ion-icon name="ellipse-outline"></ion-icon>
+          <button>판매시작</button>
+        </div>
+        <div class="progressContentLine">
+          <div class="completetLine" style="width: 0%;"></div>
+        </div>
+        <div class="progressBox">
+          <ion-icon name="ellipse-outline"></ion-icon>
+          <button>판매중지</button>
         </div>
       </div>
     </div>
