--- a/views/series_add.ejs
+++ b/views/series_add.ejs
@@ -48,7 +48,7 @@
             <p>삽화수(5)</p>
           </div>
           <div>
-            <p class="selectPriceText" id="priceBox1" onmouseenter="priceSelectView()">기본 가격<ion-icon name="chevron-down-outline"></ion-icon></p>
+            <p class="selectPriceText" id="priceBox1" onclick="priceSelectView()">기본 가격<ion-icon name="chevron-down-outline"></ion-icon></p>
             <p>장면수(2)</p>
             <p>캐릭터수(10)</p>
             <div id="priceSelectBox1" class="priceSelectBox" onmouseleave="priceSelectView()">
@@ -86,7 +86,7 @@
             <p>삽화수(5)</p>
           </div>
           <div>
-            <p class="selectPriceText" id="priceBox2" onmouseenter="priceSelectView()">무료<ion-icon name="chevron-down-outline"></ion-icon></p>
+            <p class="selectPriceText" id="priceBox2" onclick="priceSelectView()">무료<ion-icon name="chevron-down-outline"></ion-icon></p>
             <p>장면수(2)</p>
             <p>캐릭터수(10)</p>
             <div id="priceSelectBox2" class="priceSelectBox" onmouseleave="priceSelectView()">
@@ -124,7 +124,7 @@
             <p>삽화수(5)</p>
           </div>
           <div>
-            <p class="selectPriceText" id="priceBox3" onmouseenter="priceSelectView()">무료<ion-icon name="chevron-down-outline"></ion-icon></p>
+            <p class="selectPriceText" id="priceBox3" onclick="priceSelectView()">무료<ion-icon name="chevron-down-outline"></ion-icon></p>
             <p>장면수(2)</p>
             <p>캐릭터수(10)</p>
             <div id="priceSelectBox3" class="priceSelectBox" onmouseleave="priceSelectView()">
@@ -162,7 +162,7 @@
             <p>삽화수(5)</p>
           </div>
           <div>
-            <p class="selectPriceText" id="priceBox4" onmouseenter="priceSelectView()">예외 가격<ion-icon name="chevron-down-outline"></ion-icon></p>
+            <p class="selectPriceText" id="priceBox4" onclick="priceSelectView()">예외 가격<ion-icon name="chevron-down-outline"></ion-icon></p>
             <p>장면수(2)</p>
             <p>캐릭터수(10)</p>
             <div id="priceSelectBox4" class="priceSelectBox" onmouseleave="priceSelectView()">
@@ -182,6 +182,127 @@
         </div>
         <ion-icon class="delBtn" name="close-circle-outline"></ion-icon>
       </div>
+      <div class="topSelect">
+        <ion-icon name="play-back"></ion-icon>
+        <ion-icon name="chevron-back-outline"></ion-icon>
+        <span>1</span>
+        <span>2</span>
+        <span>3</span>
+        <span>4</span>
+        <span>5</span>
+        <span>6</span>
+        <span>7</span>
+        <span>8</span>
+        <span>9</span>
+        <span>10</span>
+        <ion-icon name="chevron-forward-outline"></ion-icon>
+        <ion-icon name="play-forward"></ion-icon>
+      </div>
+    </div>
+    <script>
+      const sortBtn = () => {
+        document.querySelector("#sortStori").classList.toggle("focus");
+      }
+      const clickSort = () => {
+        document.querySelector("#sortValue").innerText = event.target.innerText;
+        document.querySelector("#sortStori").classList.toggle("focus");
+      }
+    </script>
+    <p class="boxTitle" style="margin-top: 110px;">내 책상의 스토리 전체목록</p>
+    <P class="boxTitleSub">에피소드로써 판매할 스토리를 이 시리즈에 추가하세요. 추가(플러스 버튼)을 누르면 판매할 에피소드로 추가됩니다.</P>
+    <div class="listTop">
+      <p>전체 스토리 (355)</p>
+      <input type="text" placeholder="스토리찾기">
+      <p onclick="sortBtn()"><ion-icon name="list-outline"></ion-icon><span id="sortValue">최신순</span></p>
+      <div id="sortStori">
+        <p onclick="clickSort()">최신순</p>
+        <p onclick="clickSort()">가나다순</p>
+        <p onclick="clickSort()">공개순</p>
+        <p onclick="clickSort()">비공개순</p>
+        <p onclick="clickSort()">팔로워 공개 순</p>
+        <p onclick="clickSort()">초대된 사람만 순</p>
+        <p onclick="clickSort()">기본 가격순</p>
+        <p onclick="clickSort()">예외 가격순</p>
+        <p onclick="clickSort()">무료 보기순</p>
+      </div>
+    </div>
+    <div class="list">
+      <div class="imgBox">
+        <img src="images/img/011454884a20ebe329565d653639090d.jpg" alt="">
+      </div>
+      <p>맨홀 구멍&nbsp;&nbsp;</p>
+      <span>(공개)</span>
+      <span class="linkText">https//storicha.in/stori/view/SKolcN04xKW</span>
+      <ion-icon class="copy" name="copy-outline"></ion-icon>
+      <ion-icon class="plus" name="add-circle-outline"></ion-icon>
+    </div>
+    <div class="list">
+      <div class="imgBox">
+        <img src="images/img/011454884a20ebe329565d653639090d.jpg" alt="">
+      </div>
+      <p>검의 무게를 견뎌내는 자, 욕망을 다스리는 자&nbsp;&nbsp;</p>
+      <span>(비공개)</span>
+      <span class="linkText">https//storicha.in/stori/view/SKolcN04xKW</span>
+      <ion-icon class="copy" name="copy-outline"></ion-icon>
+      <ion-icon class="plus" name="add-circle-outline"></ion-icon>
+    </div>
+    <div class="list">
+      <div class="imgBox">
+        <img src="images/img/011454884a20ebe329565d653639090d.jpg" alt="">
+      </div>
+      <p>용의 눈물을 다시 머금고서&nbsp;&nbsp;</p>
+      <span>(팔로워에게만 공개)</span>
+      <span class="linkText">https//storicha.in/stori/view/SKolcN04xKW</span>
+      <ion-icon class="copy" name="copy-outline"></ion-icon>
+      <ion-icon class="plus" name="add-circle-outline"></ion-icon>
+    </div>
+    <div class="list">
+      <div class="imgBox">
+        <img src="images/img/011454884a20ebe329565d653639090d.jpg" alt="">
+      </div>
+      <p>사선의 끝에서 찾아낸 아내의 시체&nbsp;&nbsp;</p>
+      <span>(공개)</span>
+      <span class="linkText">https//storicha.in/stori/view/SKolcN04xKW</span>
+      <ion-icon class="copy" name="copy-outline"></ion-icon>
+      <ion-icon class="plus" name="add-circle-outline"></ion-icon>
+    </div>
+    <div class="list">
+      <div class="imgBox">
+        <img src="images/img/011454884a20ebe329565d653639090d.jpg" alt="">
+      </div>
+      <p>사랑과 악마&nbsp;&nbsp;</p>
+      <span>(비공개)</span>
+      <span class="linkText">https//storicha.in/stori/view/SKolcN04xKW</span>
+      <ion-icon class="copy" name="copy-outline"></ion-icon>
+      <ion-icon class="plus" name="add-circle-outline"></ion-icon>
+    </div>
+    <div class="list">
+      <div class="imgBox">
+        <img src="images/img/011454884a20ebe329565d653639090d.jpg" alt="">
+      </div>
+      <p>검의 무게를 견뎌내는 자, 욕망을 다스리는 자&nbsp;&nbsp;</p>
+      <span>(초대된 사람만)</span>
+      <span class="linkText">https//storicha.in/stori/view/SKolcN04xKW</span>
+      <ion-icon class="copy" name="copy-outline"></ion-icon>
+      <ion-icon class="plus" name="add-circle-outline"></ion-icon>
+    </div>
+    <div class="topSelect">
+      <ion-icon name="play-back"></ion-icon>
+      <ion-icon name="chevron-back-outline"></ion-icon>
+      <span>1</span>
+      <span>2</span>
+      <span>3</span>
+      <span>4</span>
+      <span>5</span>
+      <span>6</span>
+      <span>7</span>
+      <span>8</span>
+      <span>9</span>
+      <span>10</span>
+      <ion-icon name="chevron-forward-outline"></ion-icon>
+      <ion-icon name="play-forward"></ion-icon>
     </div>
   </div>
+  <button class="absoluteBtn" id="policy">가격 정책 관리로 가기</button>
+  <button class="absoluteBtn" id="desk">나의 책상으로 돌아가기</button>
 </div>
