--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,8 +9,7 @@
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
-  <body>
-  <!-- <body data-theme="dark"> -->
+  <body data-theme="dark">
     <img class="back_mask" src="/images/Mask.svg" alt="">
     <%- include('nav.ejs') %>
     <%- include(page) %>
