--- a/views/sale_epsiode .ejs
+++ b/views/sale_epsiode .ejs
@@ -1,5 +1,5 @@
 <head>
-  <link rel="stylesheet" href="/stylesheets/series_add.css">
+  <link rel="stylesheet" href="/stylesheets/sale_epsiode.css">
 </head>
 <div class="container">
   <div class="topbox">
