--- a/views/sale_policy.ejs
+++ b/views/sale_policy.ejs
@@ -1,5 +1,6 @@
 <head>
-  <link rel="stylesheet" href="/stylesheets/pay_set_up.css">
+  <link rel="stylesheet" href="/stylesheets/sale_policy.css">
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <div class="container">
   <div class="topbox">
@@ -29,7 +30,9 @@
         <div>
           <p class="title">사랑과 악마</p>
           <p class="dateText">최종 임시 저장일 2022-06-31 11:00</p>
-          <p class="dateText">최종 판매 승인일 2022-06-31 11:00</p>
+          <p class="dateText" id="second">최종 판매 승인일 2022-06-31 11:00</p>
+          <p class="tabletDateText">최종 임시 저장일 <br>2022-06-31 11:00</p>
+          <p class="tabletDateText">최종 판매 승인일 <br>2022-06-31 11:00</p>
         </div>
       </div>
       <script>
@@ -43,19 +46,104 @@
       </script>
       <div class="right">
         <div class="btnbox">
-          <div onclick="activeCategoryChange()"><ion-icon name="book-outline"></ion-icon>읽기</div>
-          <div onclick="activeCategoryChange()"><ion-icon name="pencil-outline"></ion-icon>쓰기</div>
-          <div onclick="activeCategoryChange()" id="activeCategory"><ion-icon name="wallet-outline"></ion-icon>판매</div>
+          <!-- <div onclick="activeCategoryChange()"><ion-icon name="book-outline"></ion-icon>읽기</div>
+          <div onclick="activeCategoryChange()"><ion-icon name="pencil-outline"></ion-icon>쓰기</div> -->
+          <div onclick="activeCategoryChange()" id="activeCategory"><ion-icon name="wallet-outline"></ion-icon>내 책상</div>
         </div>
         <p><span>배급사</span> 씨엠닉스</p>
         <p><span>진행현황</span> 진행중</p>
       </div>
     </div>
+    <script>
+      const buttonSelect = () => {
+        event.target.checked && document.querySelector("#exception").classList.toggle("hideBox");
+      }
+    </script>
     <div class="box2">
+      <div class="progress">
+        <div class="progressLine" id="pcLine">
+          <div class="progressBox">
+            <ion-icon name="ellipse-sharp" class="E9446C"></ion-icon>
+            <p>검수중</p>
+          </div>
+          <div class="progressContentLine">
+            <div class="completetLine" style="width: 100%;"></div>
+          </div>
+          <div class="progressBox correction">
+            <ion-icon name="checkmark-circle-sharp" class="E9446C"></ion-icon>
+            <p>수정요청</p>
+            <div class="requestBox">
+              <p>판매자님, 예외 판매 정책의 특정 에피소의 가격이 글자수에 비해 너무 큽니다. 해당 사유를 기재해서 수정해주세요.</p>
+            </div>
+          </div>
+          <div class="progressContentLine">
+            <div class="completetLine" style="width: 66.6666%;"></div>
+          </div>
+          <div class="progressBox">
+            <ion-icon name="ellipse-outline" class="E9446C"></ion-icon>
+            <p>검수완료</p>
+          </div>
+          <div class="progressContentLine" id="hideLine">
+            <div class="completetLine" style="width: 0%;"></div>
+          </div>
+          <div class="progressBox">
+            <ion-icon name="ellipse-outline"></ion-icon>
+            <button>판매시작</button>
+          </div>
+          <div class="progressContentLine">
+            <div class="completetLine" style="width: 0%;"></div>
+          </div>
+          <div class="progressBox">
+            <ion-icon name="ellipse-outline"></ion-icon>
+            <button>판매중지</button>
+          </div>
+        </div>
+        <div class="mobileProgressLine">
+          <div class="progressLine">
+            <div class="progressBox">
+              <ion-icon name="ellipse-sharp" class="E9446C"></ion-icon>
+              <p>검수중</p>
+            </div>
+            <div class="progressContentLine">
+              <div class="completetLine" style="width: 100%;"></div>
+            </div>
+            <div class="progressBox correction">
+              <ion-icon name="checkmark-circle-sharp" class="E9446C"></ion-icon>
+              <p>수정요청</p>
+              <div class="requestBox">
+                <p>판매자님, 예외 판매 정책의 특정 에피소의 가격이 글자수에 비해 너무 큽니다. 해당 사유를 기재해서 수정해주세요.</p>
+              </div>
+            </div>
+            <div class="progressContentLine">
+              <div class="completetLine" style="width: 66.6666%;"></div>
+            </div>
+            <div class="progressBox">
+              <ion-icon name="ellipse-outline" class="E9446C"></ion-icon>
+              <p>검수완료</p>
+            </div>
+          </div>
+          <div class="progressLine">
+            <div class="progressContentLine" id="hideLine">
+              <div class="completetLine" style="width: 0%;"></div>
+            </div>
+            <div class="progressBox">
+              <ion-icon name="ellipse-outline"></ion-icon>
+              <button>판매시작</button>
+            </div>
+            <div class="progressContentLine">
+              <div class="completetLine" style="width: 0%;"></div>
+            </div>
+            <div class="progressBox">
+              <ion-icon name="ellipse-outline"></ion-icon>
+              <button>판매중지</button>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="togglebtn">
-        특정 에피소드만 가격을 차별화 하고싶나요?
+        특정 에피소드만 예외 가격을 적용하고 싶나요?
         <label class="toggler-wrapper style-1">
-          <input type="checkbox" >
+          <input type="checkbox" onchange="buttonSelect()">
           <div class="toggler-slider">
             <div class="toggler-knob"></div>
           </div>
@@ -75,15 +163,6 @@
       </div>
       <div class="content">
         <div>
-          <span>판매 정책 제목</span>
-          <div class="contentbox">사랑과 악마</div>
-        </div>
-        <div class="line"></div>
-        <div>
-          <span>대여 정상가</span>
-          <div class="contentbox">10</div>
-        </div>
-        <div>
           <span>사용여부</span>
           <label class="toggler-wrapper-content style-1">
             <input type="checkbox" >
@@ -91,6 +170,15 @@
               <div class="toggler-knob"></div>
             </div>
           </label>
+        </div>
+        <div>
+          <span>판매 정책 제목</span>
+          <div class="contentbox">사랑과 악마</div>
+        </div>
+        <div class="line"></div>
+        <div>
+          <span>대여 정상가</span>
+          <div class="contentbox">10</div>
         </div>
         <div>
           <span class="E9446C">대여 할인가</span>
@@ -105,7 +193,7 @@
           <div class="contentbox">8</div>
         </div>
         <div>
-          <span>기다리면 무료 여부</span>
+          <span>기다리면 무료</span>
           <div class="contentbox">
             <label class="toggler-wrapper-content style-1" id="unique">
               <input type="checkbox" >
@@ -125,7 +213,8 @@
           <div class="contentbox">2022-06-31</div>
         </div>
         <div class="mdDelBtn">
-          <button>수정</button><button>삭제</button>
+          <!-- <button>수정</button> -->
+          <button>삭제</button>
         </div>
       </div>
     </div>
@@ -140,10 +229,10 @@
         </label>
       </div>
     </div> -->
-    <div class="box3">
+    <div class="box3 hideBox" id="exception">
       <div class="top">
         <div class="headbox">
-          <img src="images/icon/info.svg" alt="">
+          <ion-icon name="logo-bitcoin" style="font-size: 25px"></ion-icon>
           <p class="head">예외 가격 판매정책 <ion-icon name="help-circle-outline"></ion-icon></p>
         </div>
         <p class="headSub">기본 가격 판매정책 보다 더 높거나 낮게 판매하고 싶은 에피소드가 있을 경우 이곳에서 설정합니다.</p>
@@ -152,7 +241,7 @@
         <p><span>판매 정책 추가<ion-icon name="add-circle-outline"></ion-icon></span></p>
         <p><span>수정</span><span>삭제</span></p>
       </div>
-      <div class="selectBox">
+      <!-- <div class="selectBox">
         <select name="" id="">
           <option value="1">특정 스토리지정 추가</option>
           <option value="2">특정 스토리지정 추가 1</option>
@@ -165,17 +254,8 @@
         </select>
         <ion-icon name="caret-down-outline"></ion-icon>
         <button>저장</button>
-      </div>
+      </div> -->
       <div class="content">
-        <div>
-          <span>판매 정책 제목</span>
-          <div class="contentbox">사랑과 악마</div>
-        </div>
-        <div class="line"></div>
-        <div>
-          <span>대여 정상가</span>
-          <div class="contentbox">10</div>
-        </div>
         <div>
           <span>사용여부</span>
           <label class="toggler-wrapper-content style-1">
@@ -184,6 +264,15 @@
               <div class="toggler-knob"></div>
             </div>
           </label>
+        </div>
+        <div>
+          <span>판매 정책 제목</span>
+          <div class="contentbox">사랑과 악마</div>
+        </div>
+        <div class="line"></div>
+        <div>
+          <span>대여 정상가</span>
+          <div class="contentbox">10</div>
         </div>
         <div>
           <span class="E9446C">대여 할인가</span>
@@ -198,7 +287,7 @@
           <div class="contentbox">8</div>
         </div>
         <div>
-          <span>기다리면 무료 여부</span>
+          <span>기다리면 무료</span>
           <div class="contentbox">
             <label class="toggler-wrapper-content style-1" id="unique">
               <input type="checkbox" >
@@ -218,12 +307,13 @@
           <div class="contentbox">2022-06-31</div>
         </div>
         <div class="mdDelBtn">
-          <button>수정</button><button>삭제</button>
+          <!-- <button>수정</button> -->
+          <button>삭제</button>
         </div>
       </div>
     </div>
     <!--  -->
-    <div class="box3">
+    <!-- <div class="box3">
       <div class="top">
         <div class="headbox">
           <img src="images/icon/info.svg" alt="">
@@ -268,47 +358,34 @@
             </div>
           </label>
         </div>
-        <!-- <div class="mdDelBtn">
+        <div class="mdDelBtn">
           <button>수정</button><button>삭제</button>
-        </div> -->
+        </div>
       </div>
-    </div>
+    </div> -->
+    <script>
+      const focusFinal = () => {
+        document.querySelector(".mainBtnBoxHidden").id = "focusFinal"
+      }
+      const swalTest = () => {
+        Swal.fire(
+          'Good job!',
+          'You clicked the button!',
+          'success'
+        )
+      }
+    </script>
     <div class="mainBtnBox">
-      <button class="E9446CBTN">변경저장</button>
-      <button>판매요청</button>
-    </div>
-    <div class="progress">
-      <div class="progressLine">
-        <div class="progressBox">
-          <ion-icon name="ellipse-sharp" class="E9446C"></ion-icon>
-          <p>검수중</p>
-        </div>
-        <div class="progressContentLine">
-          <div class="completetLine" style="width: 100%;"></div>
-        </div>
-        <div class="progressBox">
-          <ion-icon name="checkmark-circle-sharp" class="E9446C"></ion-icon>
-          <p>수정요청</p>
-        </div>
-        <div class="progressContentLine">
-          <div class="completetLine" style="width: 66.6666%;"></div>
-        </div>
-        <div class="progressBox">
-          <ion-icon name="ellipse-outline" class="E9446C"></ion-icon>
-          <p>검수완료</p>
-        </div>
+      <div>
+        <button class="E9446CBTN">변경저장</button>
       </div>
-      <div class="progressLine" style="margin-top: 24px">
-        <div class="progressBox">
-          <ion-icon name="ellipse-outline"></ion-icon>
-          <button>판매시작</button>
-        </div>
-        <div class="progressContentLine">
-          <div class="completetLine" style="width: 0%;"></div>
-        </div>
-        <div class="progressBox">
-          <ion-icon name="ellipse-outline"></ion-icon>
-          <button>판매중지</button>
+      <div>
+        <button onclick="focusFinal()">판매요청</button>
+        <div class="mainBtnBoxHidden">
+          <p>판매자님, 무엇이 변경되었나요?</p>
+          <p>검수하는 운영자에게 알려주세요.</p>
+          <textarea name="" id="" cols="20" rows="10"></textarea>
+          <button onclick="swalTest()">보내기</button>
         </div>
       </div>
     </div>
