--- a/public/stylesheets/sale_epsiode.css
+++ b/public/stylesheets/sale_epsiode.css
@@ -99,6 +99,58 @@
   gap: 8px;
   margin-top: 14px;
 }
+.box2 .sortEpisode{
+  position: absolute;
+  right: 4px;
+  top: 0;
+  z-index: 9999999;
+  transform: translateY(calc(-100% - 10px));
+  cursor: pointer;
+  font-size: 16px;
+  display: flex;
+  align-items: center;
+}
+.box2 .sortEpisode ion-icon{
+  font-size: 24px;
+}
+.box2 #sortEpisodeBox{
+  padding: 20px;
+  box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+  display: none;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  position: absolute !important;
+  right: 0;
+  top: -10px;
+  width: auto;
+  background-color: var(--box1);
+  z-index: 9999999;
+  font-size: 18px;
+  font-family: 'NEXON Lv2 Gothic';
+  gap: 8px;
+  border-radius: 8px;
+  border: 2px solid var(--box2);
+}
+.box2 #sortEpisodeBox p{
+  cursor: pointer;
+  transition: all ease-in-out .1s;
+  display: flex;
+  align-items: center;
+  gap: 4px;
+}
+.box2 #sortEpisodeBox p:hover{
+  color: #E9446C;
+}
+.focusEposideBox{
+  display: flex !important;
+}
+#sortEpisodeBox ion-icon{
+  display: none;
+}
+.choiceSortEpisode ion-icon{
+  display: block !important;
+}
 .box2 .line{
   width: 100%;
   display: flex;
@@ -236,9 +288,9 @@
   border: 1px solid #CDCDCD;
   padding: 12px;
   top: 10px;
-  right: 0px;
+  left: 0px;
   z-index: 9999999;
-  width: 100px !important;
+  width: 200px !important;
   border-radius: 8px;
   transition: all .4s ease-in-out;
 }
@@ -248,6 +300,9 @@
 .priceSelectBox p:hover{
   color: #E9446C;
   cursor: pointer;
+}
+.priceSelectBox .priceOptions{
+  padding-left: 12px;
 }
 .viewPointer{
   display: flex !important;
